Fix top shadow on search bar on iOS (#207)
* Fix top shadow on search bar on iOS

* Revert accidental package-lock.json changes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1817,11 +1817,9 @@ $green-font-color: #19B028;
   color: var(--text) !important;
   background: var(--formbg) !important;
   border-color: var(--border) !important;
-  outline: none;
-  -webkit-box-shadow: none !important;
-  -moz-box-shadow: none !important;
-  box-shadow: none !important;
-  background-clip: padding-box;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 .normal-text {
   color: $text-color;
